================================================
|                Version 0.10                  |
================================================
 - new portraits (thanks to nubux, qubodup and scribe);
 - new menu and game-over musics;
 - highlight connections on minimap;
 - dialog checks can be against factors (instead of 
   only numerical values)

BugFixes:
 - heightmap2dnt: Fixed a missing include;
 - Changes on the bump mapping shader to suppor not so 
   recent video cards (Geforce 6 series);
 - Restricted SDL_ttf to >= 2.0.10 in ./configure script;

================================================
|                Version 0.9                   |
|            Released: 2012-05-26              |
================================================
 - gui: rolBar can use position button to scroll text;
 - gui: button type: KEEP_PRESSING for buttons that will
        remain pressed until mouse is released, ignoring
		  if inner the button area;
 - Setting delta to sceneNode minY when lesser than 0;
 - script: new functions: callAnimation, setAnimation, playSound;
 - New script to controll cattle idle behaviour;
 - New script to controll beggars idle behaviour;
 - Added support to idtech4 (.md5*) models and animations;
 - 3D messages could be static on Y axis;
 - Lots of adjusts and fixes to the A* implementation;
 - Disabling vsync via OpenGL for better perfomance in OSX;
 - Verifying sight when NPC selecting target enemy and when 
   PC or NPC do an action;
 - Possibility to disable depth collision check on models where 
   the boundingBox check is enough;
 - Support for model's bump (normal) mapping;
 - Simplified number of skills to 12;
 - Removed the class Administration Student;
 - mapEditor: Support for skorpio OD tilesets;
 - New Models;
 - New Sound Effects and Music;

BugFixes:
 - sound: Fixed a possible double OpenAL stop when releasing an ogg_stream;
 - sound: Fixed a undesired loop with a sound file lesser than the buffer;