@@ -6,6 +6,7 @@
  - highlight connections on minimap;
  - dialog checks can be against factors (instead of 
    only numerical values)
+ - Lockable doors;
 
 BugFixes:
  - heightmap2dnt: Fixed a missing include;
